--- a/src/LlamaShears.Api.Web/Pages/Chat.razor.css
+++ b/src/LlamaShears.Api.Web/Pages/Chat.razor.css
@@ -2,8 +2,6 @@
     display: grid;
     grid-template-rows: 1fr auto;
     height: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
     padding: 1rem;
     gap: 1rem;
 }
